# python-nexus

./: .coveragerc  .gitignore  .hgignore  .travis.yml  CHANGES.md  LICENSE  MANIFEST  MANIFEST.in  Makefile  README  README.md  README.txt  RELEASING.md  fabfile.py  nexus.py  reader.py  readme.txt  runtests.sh  setup.cfg  setup.py  test_reader.py  tests.py  writer.py
examples/: example.trees
nexus/: __init__.py  checker.py  exceptions.py  nexus.py  reader.py  tools.py  writer.py
nexus/examples/: example-comments.nex  example.nex  example_beast.trees  maddison_et_al.nex
nexus/handlers/: __init__.py  data.py  taxa.py  tree.py
nexus/test/: __init__.py  test_bin.py  test_checker.py  test_handler_DataHandler.py  test_handler_GenericHandler.py  test_handler_TaxaHandler.py  test_handler_TreeHandler.py  test_maddison.py  test_nexusmanip.py  test_reader.py  test_reader_manipulation.py  test_regressions.py  test_tools.py  test_treemanip.py  test_writer.py
nexus/test/regression/: taxlabels.nex  (+2 more)
nexus/tools/: __init__.py  binarise.py  check_for_valid_NexusReader.py  check_zeros.py  combine_nexuses.py  multistatise.py  shufflenexus.py  sites.py
src/nexus/: __init__.py  __main__.py  checker.py  cli_util.py  exceptions.py  reader.py  util.py  writer.py
tests/: conftest.py  test_checker.py  test_cli.py  test_cli_util.py  test_handler_DataHandler.py  test_handler_GenericHandler.py  test_handler_TaxaHandler.py  test_handler_TreeHandler.py  test_maddison.py  test_parser.py  test_reader.py  test_reader_manipulation.py  test_regressions.py  test_writer.py
tests/examples/: example-wrapped-data.nex
tests/regression/: detranslate-beast-2.trees  detranslate-beast.trees  edictor.nex  mesquite_taxa_block.nex  mrbayes.trees  tree_default_translate_with_comments.trees  tree_translate_mismatch.trees  tree_with_asterisk_in_taxa.trees
tests/test_tools/: test_anonymise.py  test_binarise.py  test_check_for_valid_NexusReader.py  test_check_zeros.py  test_combine_nexuses.py  test_count_binary_set_size.py  test_count_site_values.py  test_find_constant_sites.py  test_find_unique_sites.py  test_multistatise.py  test_new_nexus_without_sites.py  test_run_resample.py  test_shufflenexus.py  test_tally_by_site.py  test_tally_by_taxon.py  test_treemanip.py
(+63 files in other folders)
