[metadata]
name = python-nexus
version = 2.9.0
author = Simon Greenhill and Robert Forkel
author_email = simon@simon.net.nz
description = A nexus (phylogenetics) file reader (.nex, .trees)
long_description = file: README.md
long_description_content_type = text/markdown
keywords = phylogenetics nexus newick paup splitstree
license = BSD-2-Clause
license_files = LICENSE
url = https://github.com/dlce-eva/python-nexus
project_urls =
    Bug Tracker = https://github.com/cldf/pycldf/issues
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Natural Language :: English
    Operating System :: OS Independent
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    License :: OSI Approved :: BSD License

[options]
zip_safe = False
packages = find:
package_dir =
    = src
python_requires = >=3.7
install_requires =
    newick>=1.3.1
    clldutils>=3.10.0
    termcolor

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    nexus = nexus.__main__:main

[options.extras_require]
dev =
    tox
    flake8
    wheel>=0.36
    twine
    build
test =
    pytest>=5
    pytest-mock
    pytest-cov
    coverage>=4.2

[bdist_wheel]
universal = 1

[flake8]
ignore = E711,E712,D100,D101,D103,D102,D301,W503
max-line-length = 100
exclude = .tox

[tool:pytest]
minversion = 5
testpaths = tests
addopts = --cov

[easy_install]
zip_ok = false

[coverage:run]
source =
    nexus
    tests

[coverage:report]
show_missing = true
skip_covered = true

[tox:tox]
envlist = py37, py38, py39, py310
isolated_build = true
skip_missing_interpreter = true

[testenv]
deps = .[test]
commands = pytest {posargs}
